# wo

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  config.example.toml  nohup.out  whatever.txt
electron/: .gitignore  package.json  tsconfig.json  whatever.txt
electron/native/: binding.gyp  wo_dmabuf.cc
electron/src/: damage-buffer.ts  main.ts  preload.ts  protocol.ts  renderer-damage-helper.ts  wo-input-receiver.ts
electron/types/: README.md  dispatcher.ts  index.ts  package.json  types.d.ts
packaging/dbus-services/: org.freedesktop.impl.portal.desktop.wo.service
packaging/portals/: wo.portal
packaging/wayland-sessions/: wo.desktop
src/: backend.rs  config.rs  cursor.rs  dmabuf.rs  electron.rs  lib.rs  main.rs  nested.rs  state.rs  syscall.rs
src/handlers/: compositor.rs  dmabuf_handler.rs  input.rs  mod.rs  output.rs  screencopy.rs  xdg_decoration.rs  xdg_shell.rs  xwayland.rs
src/state/: portal.rs
